# src/main/resources/openapi.yml
@@ -190,9 +190,19 @@ components:
           type: string
     ErrorResponse:
       type: object
+      required:
+        - status
+        - code
+        - message
+        - timestamp
       properties:
-        error:
+        status:
+          type: int
+        code:
           type: string
         message:
           type: string
+        timestamp:
+          type: string
+          format: date-time
 
